--- a/app/views/layouts/mission_control/jobs/application.html.erb
+++ b/app/views/layouts/mission_control/jobs/application.html.erb
@@ -9,6 +9,7 @@
   <meta name="turbo-cache-control" content="no-cache">
   <script src="https://cdn.jsdelivr.net/npm/@hotwired/turbo@8.0.4"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  <%= render 'layouts/mission_control/jobs/style' %>
 </head>
 <body>
 
